SCSS fix for z-index issue

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -14,12 +14,14 @@
   -webkit-transform: translate(0, -100%);
   -ms-transform: translate(0, -100%);
   transform: translate(0, -100%);
+  visibility: hidden;
   &.active {
     opacity: 1;
     -webkit-transform: translate(0, 0);
     -ms-transform: translate(0, 0);
     transform: translate(0, 0);
     max-height: none;
+    visibility: visible;
   }
 }
 
@@ -147,6 +149,8 @@
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+  z-index: 100;
+  position: relative;
   .load-more-boards-button {
     width: 71.5px;
     height: auto;
